--- a/Final-Report/acknowledgements.tex
+++ b/Final-Report/acknowledgements.tex
@@ -4,16 +4,16 @@
 
 Special thanks to \textbf{Bernhard Kainz} whose guidance was invaluable.
 
-Thanks also to everybody who gave their time to help with the evaluation:
+Thanks also to everybody who gave their time to help with the evaluation.
 
 \begin{itemize}
-	\item Amir Alansary
-	\item Paul Aljabar
-	\item Joshua van Amerom
-	\item Rose Crowley
-	\item Alice Davidson
-	\item Kevin Keraudren
-	\item Maelene Lohezic
-	\item Kerstin Pannek
-	\item Prachi Patkee
+	\item[] Amir Alansary
+	\item[] Paul Aljabar
+	\item[] Joshua van Amerom
+	\item[] Rose Crowley
+	\item[] Alice Davidson
+	\item[] Kevin Keraudren
+	\item[] Maelene Lohezic
+	\item[] Kerstin Pannek
+	\item[] Prachi Patkee
 \end{itemize}
