Contents page on one page.

--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -134,7 +134,7 @@ An aggregation of all three will be able to give a useful overview of the situat
 % ------- SVD / PCA ------- %
 % ------------------------- %
 \newpage
-\section{SVD and PCA}\label{background:svdpca}
+\section{SVD \& PCA}\label{background:svdpca}
 SVD (Singular Value Decomposition) breaks down a matrix, $A$, into three components: $U$, $D$ and $V$.
 
 \begin{align}
