--- a/Final-Report/body.tex
+++ b/Final-Report/body.tex
@@ -1,4 +1,4 @@
-\chapter{Implementation - Tool}
+\chapter{The Tool}
 This project has been implemented as an MITK plugin. MITK, the Medical Imaging Interaction Toolkit, is a free open-source software system for the development of interactive medical image processing software. It combines ITK (for image processing) and VTK (for visualization) together with a basic application, the MITK Workbench, that can be extended with plugins.
 
 \begin{figure}[H]
@@ -103,7 +103,7 @@ Figure \ref{fig:reconstructionlandmarks} shows the process with some example lan
 \end{figure}
 
 \newpage
-\chapter{Implementation - Visualizations}\label{sectiontoolvisualization}
+\chapter{The Visualizations}\label{sectiontoolvisualization}
 
 \begin{figure}[h]
   \centering
