--- a/Final-Report/conclusion.tex
+++ b/Final-Report/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Conclusions and Future Work}
+\chapter{Conclusions \& Future Work}
 Overall the visualizations and prototypes represent a solid step towards a useful research tool for reconstructing MRI images. The work also provides a foothold for a number of potential future projects.
 
 \section{Scan Simulation}
