Bibliography entries tidied. No longer overflow.

--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -257,7 +257,7 @@ The process is easier to visualize in 2D (marching squares), see Figure~\ref{fig
 \begin{figure}[H]
     \centering
 	\includegraphics[width=0.8\textwidth]{images/background/marching_squares.jpg}
-    \caption{Using marching squares to extract a shape. From \cite{marching_squares:image}}
+    \caption{Using marching squares. From \cite{marching_squares:image}}
     \label{fig:marching_squares}
 \end{figure}
 
