--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -1,49 +1,49 @@
 @MISC {rontgen,
     author       = "NobelPrize.org",
     title        = "Wilhelm Conrad R{\"o}ntgen - Biographical",
-    howpublished = "http://www.nobelprize.org/nobel\_prizes/physics/laureates/1901/rontgen-bio.html",
+    howpublished = "\url{http://www.nobelprize.org/nobel\_prizes/physics/laureates/1901/rontgen-bio.html}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {xraydeath,
     author       = "Nukes.org",
     title        = "{First American X-Ray Fatality}",
-    howpublished = "{http://www.nukes.org/MAp/dally.html}",
+    howpublished = "{\url{http://www.nukes.org/MAp/dally.html}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {infinityhistory,
     author       = "Infinity Imaging Lab",
     title        = "{A history of medical imaging}",
-    howpublished = "{http://www.infinityugent.be/research-development/a-history-of-medical-imaging}",
+    howpublished = "{\url{http://www.infinityugent.be/research-development/a-history-of-medical-imaging}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {bshr:mallard,
     author       = "The British Society for the History of Radiology",
     title        = "{John Mallard}",
-    howpublished = "{http://www.bshr.org.uk/mallard.html}",
+    howpublished = "{\url{http://www.bshr.org.uk/mallard.html}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {fmri,
     author       = "Magnetic-Resonance.org",
     title        = "{Functional Imaging}",
-    howpublished = "{http://www.magnetic-resonance.org/ch/11-03.html}",
+    howpublished = "{\url{http://www.magnetic-resonance.org/ch/11-03.html}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {pregnancyimagingguidelines,
     author       = "American Congress of Obstetricians and Gynecologists",
     title        = "{Guidelines for Diagnostic Imaging During Pregnancy}",
-    howpublished = "{http://www.acog.org/Resources-And-Publications/Committee-Opinions/Committee-on-Obstetric-Practice/Guidelines-for-Diagnostic-Imaging-During-Pregnancy}",
+    howpublished = "{\url{http://www.acog.org/Resources-And-Publications/Committee-Opinions/Committee-on-Obstetric-Practice/Guidelines-for-Diagnostic-Imaging-During-Pregnancy}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {howmriworks,
     author       = "How Equipment Works.com",
     title        = "{Magnetic Resonance Imaging: Basic principles of how it works}",
-    howpublished = "{http://www.howequipmentworks.com/physics/medical\_imaging/mri/magnetic\_resonance\_imaging.html}",
+    howpublished = "{\url{http://www.howequipmentworks.com/physics/medical\_imaging/mri/magnetic\_resonance\_imaging.html}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
@@ -52,7 +52,7 @@
     title       = "Fetal MRI: An approach to practice: A review",
     institution = "Kasr Al Ainy Faculty of Medicine",
     year        = "2013",
-    address     = "http://www.sciencedirect.com/science/article/pii/S2090123213000805"
+    address     = "\url{http://www.sciencedirect.com/science/article/pii/S2090123213000805}"
 }
 
 @TECHREPORT {superresolution1,
@@ -60,7 +60,7 @@
     title       = "Super-Resolution in Magnetic Resonance Imaging: A Review",
     institution = "Nanyang Technological University, National University Cancer Institute, Tan Tock Seng Hospital",
     year        = "2012",
-    address     = "http://onlinelibrary.wiley.com/doi/10.1002/cmr.a.21249/abstract"
+    address     = "\url{http://onlinelibrary.wiley.com/doi/10.1002/cmr.a.21249/abstract}"
 }
 
 @TECHREPORT {superresolution2,
@@ -68,13 +68,13 @@
     title       = "Super-Resolution Image Reconstruction: A Technical Overview",
     institution = "IEEE",
     year        = "2003",
-    address     = "http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=1203207\&tag=1"
+    address     = "\url{http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=1203207\&tag=1}"
 }
 
 @MISC {wienerfilter,
     author       = "Rice University",
     title        = "{Wiener Filtering}",
-    howpublished = "{http://www.owlnet.rice.edu/~elec539/Projects99/BACH/proj2/wiener.html}",
+    howpublished = "{\url{http://www.owlnet.rice.edu/~elec539/Projects99/BACH/proj2/wiener.html}}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
@@ -83,14 +83,14 @@
     title       = "Communication in the Presence of Noise",
     institution = "IEEE",
     year        = "1998",
-    address     = "http://web.stanford.edu/class/ee104/shannonpaper.pdf",
+    address     = "\url{http://web.stanford.edu/class/ee104/shannonpaper.pdf}",
     note        = "Last Accessed: 30/01/2015"
 }
 
 @MISC {nvidia:volumerendering,
     author       = "Nvidia",
     title        = "Chapter 39. Volume Rendering Techniques",
-    howpublished = "http://http.developer.nvidia.com/GPUGems/gpugems\_ch39.html",
+    howpublished = "\url{http://http.developer.nvidia.com/GPUGems/gpugems\_ch39.html}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
@@ -99,7 +99,7 @@
     title       = "Surface Rendering versus Volume Rendering in Medical Imaging: Techniques and Applications",
     institution = "Stanford University Medical Center",
     year        = "1996",
-    address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=568151",
+    address     = "\url{http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=568151}",
     note        = "Last Accessed: 30/01/15"
 }
 
@@ -108,7 +108,7 @@
     title       = "Attractive Flicker - Guiding Attention in Dynamic Narrative Visualizations",
     institution = "Vienna University of Technology and VRVis Research Center",
     year        = "2014",
-    address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6876019\&contentType=Early+Access+Articles"
+    address     = "\url{http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6876019\&contentType=Early+Access+Articles}"
 }
 
 @TECHREPORT {labelling,
@@ -116,7 +116,7 @@
     title       = "Survey of Labeling Techniques in Medical Visualizations",
     institution = "University of Magdeburg",
     year        = "2014",
-    address     = "http://www.vismd.de/lib/exe/fetch.php?media=files:labelling:oeltze\_2014\_vcbm.pdf"
+    address     = "\url{http://www.vismd.de/lib/exe/fetch.php?media=files:labelling:oeltze\_2014\_vcbm.pdf}"
 }
 
 @TECHREPORT {uncertaintyoverview,
@@ -124,34 +124,20 @@
     title       = "A Review of Uncertainty in Data Visualization",
     institution = "University of Leeds and University of Talca and Universidade Nova de Lisboa",
     year        = "2012",
-    address     = "http://www.comp.leeds.ac.uk/kwb/publication\_repository/2012/uncert.pdf"
+    address     = "\url{http://www.comp.leeds.ac.uk/kwb/publication\_repository/2012/uncert.pdf}"
 }
 
 @MISC {heatmap,
     author       = "The Walking Bostonian",
     title        = "MBTA service heat map",
-    howpublished = "http://walkingbostonian.blogspot.co.uk/2012/02/mbta-service-heat-map.html",
-    note         = "{Last Accessed: 30/01/15}"
-}
-
-@MISC {ransac:image,
-    author       = "Msm",
-    title        = "Fitted line",
-    howpublished = "http://commons.wikimedia.org/wiki/File:Fitted\_line.svg",
+    howpublished = "\url{http://walkingbostonian.blogspot.co.uk/2012/02/mbta-service-heat-map.html}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
 @MISC {marching_squares:image,
     author       = "Ben Anderson",
-    title        = "An Implementation of the Marching Cubes[1] Algorithm",
-    howpublished = "http://www.cs.carleton.edu/cs\_comps/0405/shape/marching\_cubes.html",
-    note         = "{Last Accessed: 30/01/15}"
-}
-
-@MISC {niftivtk,
-    author       = "fbeeper",
-    title        = "Load volumetric NIFTI data into VTK using ITK",
-    howpublished = "https://github.com/fbeeper/nifti-vtk",
+    title        = "An Implementation of the Marching Cubes Algorithm",
+    howpublished = "\url{http://www.cs.carleton.edu/cs\_comps/0405/shape/marching\_cubes.html}",
     note         = "{Last Accessed: 30/01/15}"
 }
 
@@ -167,21 +153,40 @@
     title       = "Fast Volume Reconstruction from Motion Corrupted Stacks of 2D Slices",
     institution = "Imperial College London and Kings College London",
     year        = "2015",
-    address     = "http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7064742"
+    address     = "\url{http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7064742}"
 }
 
-@MISC {ctkcmd},
+% Works.
+@MISC {ransac:image,
+    author       = "Msm",
+    title        = "Fitted line",
+    howpublished = "\url{http://commons.wikimedia.org/wiki/File:Fitted\_line.svg}",
+    note         = "{Last Accessed: 30/01/15}"
+}
+
+% Knackered.
+@MISC {ctkcmd,
     author       = "CTK",
     title        = "CTK Command Line Modules",
-    howpublished = "http://www.commontk.org/docs/html/CommandLineModules\_Page.html",
+    howpublished = "\url{http://www.commontk.org/docs/html/CommandLineModules\_Page.html}",
     note         = "{Last Accessed: 07/06/15}"
 }
 
-@MISC {mrilab},
-    author       = "Fang Liu ",
+% Knackered.
+@MISC {mrilab,
+    author       = "Fang Liu",
     title        = "MRiLab",
-    howpublished = "http://mrilab.sourceforge.net/",
+    howpublished = "\url{http://mrilab.sourceforge.net/}",
     note         = "{Last Accessed: 08/06/15}"
+}
+
+% Knackered
+@MISC {fetalatlas,
+    author       = "Biomedical Image Analysis Group",
+    institution  = "Imperial College London",
+    title        = "A Multi-channel 4D Probabilistic Atlas of the Developing Fetal Brain",
+    howpublished = "\url{http://biomedic.doc.ic.ac.uk/brain-development/index.php?n=Main.Fetal}",
+    note         = "{Last Accessed: 12/06/15}"
 }
 
 @TECHREPORT {fetalmovement,
@@ -189,14 +194,7 @@
     title       = "What Does Fetal Movement Predict About Behavior During the First Two Years of Life?",
     institution = "Johns Hopkins University and National Institute of Child Health and Human Development",
     year        = "2001",
-    address     = "http://www.jhsph.edu/research/centers-and-institutes/johns-hopkins-fetal-development-project/\_materials/\_publications/movement.pdf"
-}
-
-@MISC {mrilab},
-    author       = "Fang Liu ",
-    title        = "MRiLab",
-    howpublished = "http://mrilab.sourceforge.net/",
-    note         = "{Last Accessed: 08/06/15}"
+    address     = "\url{http://www.jhsph.edu/research/centers-and-institutes/johns-hopkins-fetal-development-project/\_materials/\_publications/movement.pdf}"
 }
 
 @BOOK {basicsofmri,
@@ -204,13 +202,5 @@
     title     = "The Basics of MRI",
     publisher = "Rochester Institute of Technology",
     year      = "1997",
-    address   = "https://www.cis.rit.edu/htbooks/mri/chap-8/chap-8.htm"
-}
-
-@MISC {fetalatlas},
-    author       = "Biomedical Image Analysis Group",
-    institution  = "Imperial College London",
-    title        = "A Multi-channel 4D Probabilistic Atlas of the Developing Fetal Brain",
-    howpublished = "http://biomedic.doc.ic.ac.uk/brain-development/index.php?n=Main.Fetal",
-    note         = "{Last Accessed: 12/06/15}"
+    address   = "\url{https://www.cis.rit.edu/htbooks/mri/chap-8/chap-8.htm}"
 }
